I've decided that this plugin will only support grails 2.3.x and above.  It has been modified accordingly.